--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_secure_storage: ^9.2.2
   go_router: ^14.2.8
+  flutter_bloc: ^8.1.6
+  dio: ^5.7.0
+  get_it: ^8.0.0
 
 dev_dependencies:
   flutter_test:
