--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   mobile_scanner: ^5.2.3
   image_picker: ^1.1.2
   url_launcher: ^6.3.0
+  syncfusion_flutter_pdfviewer: ^27.1.50
+  wifi_scan: ^0.4.1+1
+  wifi_iot: ^0.3.19+1
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
