--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   svg_flutter: ^0.0.1
   share_plus: ^10.0.2
   screenshot: ^3.0.0
+  dartz: ^0.10.1
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
