--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   screenshot: ^3.0.0
   dartz: ^0.10.1
   firebase_core: ^3.6.0
+  firebase_storage: ^12.3.2
 
 dev_dependencies:
   flutter_test:
