--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   dartz: ^0.10.1
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
