--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.2
   uuid: ^4.5.1
+  file_picker: ^8.1.2
+  pdf_render: ^1.4.12
 
 dev_dependencies:
   flutter_test:
