--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   uuid: ^4.5.1
   file_picker: ^8.1.2
   pdf_render: ^1.4.12
+  flutter_widget_from_html: ^0.15.2
 
 dev_dependencies:
   flutter_test:
