--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,17 @@ dependencies:
   file_picker: ^8.1.2
   pdf_render: ^1.4.12
   flutter_widget_from_html: ^0.15.2
+  flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/logo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
